--- a/MyPad/Properties/Resources.resx
+++ b/MyPad/Properties/Resources.resx
@@ -717,4 +717,7 @@ These changes will be applied on restart. Do you want to continue?</value>
   <data name="Command_ShowSideBar" xml:space="preserve">
     <value>SideBar</value>
   </data>
+  <data name="Command_Panels" xml:space="preserve">
+    <value>Panels</value>
+  </data>
 </root>
