[update] テキストを読み込んだ際、通知を表示するように変更

--- a/MyPad/Properties/Resources.ja-JP.resx
+++ b/MyPad/Properties/Resources.ja-JP.resx
@@ -680,4 +680,7 @@
   <data name="Command_Panels" xml:space="preserve">
     <value>パネル</value>
   </data>
+  <data name="Message_NotifyLoaded" xml:space="preserve">
+    <value>テキストを読み込みました。</value>
+  </data>
 </root>
