--- a/MyPad/Properties/Resources.resx
+++ b/MyPad/Properties/Resources.resx
@@ -723,4 +723,7 @@ These changes will be applied on restart. Do you want to continue?</value>
   <data name="Message_NotifyLoaded" xml:space="preserve">
     <value>Text loaded.</value>
   </data>
+  <data name="LabelText_EnableFoldings" xml:space="preserve">
+    <value>Enable foldings.</value>
+  </data>
 </root>
