[update] テキストを保存、または読み込んだ際の通知内容を変更

--- a/MyPad/Properties/Resources.ja-JP.resx
+++ b/MyPad/Properties/Resources.ja-JP.resx
@@ -624,7 +624,7 @@
     <value>F11 を押して全画面表示を終了します。</value>
   </data>
   <data name="Message_NotifySaved" xml:space="preserve">
-    <value>テキストが保存されました。</value>
+    <value>テキストを保存しました。</value>
   </data>
   <data name="Command_Diff" xml:space="preserve">
     <value>差分表示</value>
