[update] アプリケーションの起動時に残留する一時フォルダの存在を通知するように変更、退避ファイルの命名規則を変更

--- a/MyPad/Properties/Resources.ja-JP.resx
+++ b/MyPad/Properties/Resources.ja-JP.resx
@@ -686,4 +686,7 @@
   <data name="LabelText_EnableFoldings" xml:space="preserve">
     <value>コードの折り畳みを有効にする。</value>
   </data>
+  <data name="Message_NotifyCachedFilesRemain" xml:space="preserve">
+    <value>過去にキャッシュされたファイルが見つかりました。ご確認ください。</value>
+  </data>
 </root>
