--- a/MyPad/Properties/Resources.ja-JP.resx
+++ b/MyPad/Properties/Resources.ja-JP.resx
@@ -686,6 +686,9 @@
   <data name="LabelText_EnableFoldings" xml:space="preserve">
     <value>コードの折り畳みを有効にする。</value>
   </data>
+  <data name="LabelText_ShowChangeMarker" xml:space="preserve">
+    <value>変更行を示すマーカーを表示にする。</value>
+  </data>
   <data name="Message_NotifyCachedFilesRemain" xml:space="preserve">
     <value>過去にキャッシュされたファイルが見つかりました。ご確認ください。</value>
   </data>
