[update] 重要度の低いアプリ内のトースト通知の表示、非表示を制御できるように変更

--- a/MyPad/Properties/Resources.en-US.resx
+++ b/MyPad/Properties/Resources.en-US.resx
@@ -698,4 +698,7 @@ These changes will be applied on restart. Do you want to continue?</value>
   <data name="Label_ColumnRulerPosition" xml:space="preserve">
     <value>Column ruler position</value>
   </data>
+  <data name="LabelText_UseInAppToastNotifications" xml:space="preserve">
+    <value>Use in-app toast notifications.</value>
+  </data>
 </root>
