[fix] 軽微な修正

--- a/MyPad/Properties/Resources.resx
+++ b/MyPad/Properties/Resources.resx
@@ -479,7 +479,7 @@
     <value>一時フォルダ</value>
   </data>
   <data name="Label_TextEditor" xml:space="preserve">
-    <value>テキストエディター</value>
+    <value>テキストエディタ</value>
   </data>
   <data name="Label_Type" xml:space="preserve">
     <value>種類</value>
