--- a/MyPad/Properties/Resources.en-US.resx
+++ b/MyPad/Properties/Resources.en-US.resx
@@ -709,7 +709,7 @@ Please check and delete unnecessary files.</value>
     <value>Import settings</value>
   </data>
   <data name="Command_InitializeSettings" xml:space="preserve">
-    <value>Initialize the system settings</value>
+    <value>Initialize the settings</value>
   </data>
   <data name="Message_ConfirmInitializeSettings" xml:space="preserve">
     <value>Are you sure you want to initialize the system settings?</value>
@@ -719,5 +719,8 @@ Please check and delete unnecessary files.</value>
   </data>
   <data name="Label_IndentationSize" xml:space="preserve">
     <value>Indentation size</value>
+  </data>
+  <data name="Label_SystemSettings" xml:space="preserve">
+    <value>System settings</value>
   </data>
 </root>
