[update] コードの展開と折り畳みをコマンドメニューに追加

--- a/MyPad/Properties/Resources.en-US.resx
+++ b/MyPad/Properties/Resources.en-US.resx
@@ -747,4 +747,13 @@ Please check and delete unnecessary files.</value>
   <data name="Command_Apply" xml:space="preserve">
     <value>Apply</value>
   </data>
+  <data name="Command_Coding" xml:space="preserve">
+    <value>Coding</value>
+  </data>
+  <data name="Command_Folding" xml:space="preserve">
+    <value>Folding</value>
+  </data>
+  <data name="Command_Unfolding" xml:space="preserve">
+    <value>Unfolding</value>
+  </data>
 </root>
