--- a/MyPad/Properties/Resources.resx
+++ b/MyPad/Properties/Resources.resx
@@ -787,4 +787,13 @@
   <data name="Command_Apply" xml:space="preserve">
     <value>適用</value>
   </data>
+  <data name="Command_Coding" xml:space="preserve">
+    <value>コーディング</value>
+  </data>
+  <data name="Command_Folding" xml:space="preserve">
+    <value>コードを折りたたむ</value>
+  </data>
+  <data name="Command_Unfolding" xml:space="preserve">
+    <value>コードを展開する</value>
+  </data>
 </root>
