--- a/MyPad/Properties/Resources.en-US.resx
+++ b/MyPad/Properties/Resources.en-US.resx
@@ -765,4 +765,7 @@ Please check and delete unnecessary files.</value>
   <data name="Command_WindowStructure" xml:space="preserve">
     <value>Window structure</value>
   </data>
+  <data name="Command_Creator" xml:space="preserve">
+    <value>Creator</value>
+  </data>
 </root>
