--- a/MyPad/Properties/Resources.resx
+++ b/MyPad/Properties/Resources.resx
@@ -805,4 +805,7 @@
   <data name="Command_WindowStructure" xml:space="preserve">
     <value>画面構成</value>
   </data>
+  <data name="Command_Creator" xml:space="preserve">
+    <value>作成者</value>
+  </data>
 </root>
