--- a/MyPad/Properties/Resources.en-US.resx
+++ b/MyPad/Properties/Resources.en-US.resx
@@ -765,4 +765,13 @@ Please check and delete unnecessary files.</value>
   <data name="LabelText_SetExplorerRoot" xml:space="preserve">
     <value>Set the root directory of explorer.</value>
   </data>
+  <data name="Command_Maintenance" xml:space="preserve">
+    <value>Maintenance</value>
+  </data>
+  <data name="Label_LogViewer" xml:space="preserve">
+    <value>Log viewer</value>
+  </data>
+  <data name="Label_PerformanceMonitor" xml:space="preserve">
+    <value>Performance monitor</value>
+  </data>
 </root>
