[fix] オプション画面の一部設定の文言を修正

--- a/MyPad/Properties/Resources.en-US.resx
+++ b/MyPad/Properties/Resources.en-US.resx
@@ -697,7 +697,7 @@ Please check and delete unnecessary files.</value>
     <value>Column ruler position</value>
   </data>
   <data name="LabelText_UseInAppToastNotifications" xml:space="preserve">
-    <value>Use in-app toast notifications.</value>
+    <value>Use quiet notifications for low importance.</value>
   </data>
   <data name="Command_ExportSettings" xml:space="preserve">
     <value>Export settings</value>
