--- a/MyPad/Properties/Resources.resx
+++ b/MyPad/Properties/Resources.resx
@@ -838,7 +838,16 @@
   <data name="Message_NotifyPomodoroWorkTime" xml:space="preserve">
     <value>作業を始めましょう。</value>
   </data>
-  <data name="Label_PomodoroTimer" xml:space="preserve">
+  <data name="Command_PomodoroTimer" xml:space="preserve">
     <value>ポモドーロタイマー</value>
+  </data>
+  <data name="Message_ConfirmStopPomodoro" xml:space="preserve">
+    <value>ポモドーロタイマーをストップします。よろしいですか？</value>
+  </data>
+  <data name="Label_PomodoroBreakMinutes" xml:space="preserve">
+    <value>休憩時間</value>
+  </data>
+  <data name="Label_PomodoroWorkMinutes" xml:space="preserve">
+    <value>作業時間</value>
   </data>
 </root>
